evaluation/kubernetes/apps/prose-system/prose/app/presidio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: presidio
spec:
  selector:
    matchLabels:
      app: presidio
  template:
    metadata:
      labels:
        app: presidio
    spec:
      containers:
      - name: presidio
        image: ghcr.io/dettanym/prose-presidio:main
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: http
        readinessProbe:
          httpGet:
            path: /health
            port: http
