evaluation/kubernetes/apps/prose-system/prose/app/prose-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prose-server
spec:
  selector:
    matchLabels:
      app: prose-server
  template:
    metadata:
      labels:
        app: prose-server
    spec:
      containers:
      - name: prose-server
        image: ghcr.io/dettanym/prose-opa-composer-server:main
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: grpc
          containerPort: 50051
          protocol: TCP
        volumeMounts:
          - mountPath: /app/tmp
            name: compiled-bundle
        livenessProbe:
          httpGet:
            path: /health
            port: http
        readinessProbe:
          httpGet:
            path: /health
            port: http
        resources:
          limits:
            memory: 1Gi
            cpu: "500m"
      volumes:
        - name: compiled-bundle
          emptyDir:
            sizeLimit: 1Gi
