evaluation/kubernetes/apps/prose-system/prose/app/presidio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: presidio
spec:
  selector:
    app: presidio
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
    name: http
