evaluation/kubernetes/apps/prose-system/prose/app/prose-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prose-server
spec:
  selector:
    app: prose-server
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  - port: 50051
    targetPort: grpc
    protocol: TCP
    name: grpc
